# HumanTalkPuzzleSolver

./: README.md  pyproject.toml
1 Intro/: minesweeperSolverBrutForce.py
2. Puzzle/: MinesweeperSolver_z3.py  TentsSolver_ortools.py  minesweeperSolver_ortools.py  numberLinkSolver_or-tools.py  numberLinkSolver_z3.py  sudokuSolver_or-tools.py  sudokuSolver_z3solver.py  tentsSolver_z3.py
3 Puzzle/: binairoSolverOrtools.py  minesweeperSolverOrtools.py  minesweeperSolverZ3.py  numberLinkSolver_ortools.py  sudokuSolver_z3solver.py  tentsSolverOrtools.py  tentsSolverZ3.py
3 TSP/: tsp.py  tspManualHeuristic.py  tspPulp.py  tspScip.py  tspZ3.py
3. Benchmark/: queens_or-tools.py  queens_ortools.py  queens_z3.py
Images/: Suguru_tectonic61.avif  binairo_binero83.avif  multilogic.avif  nonogrammes_logimage77.avif  sudoku_sudoku191.avif
a_Intro/: QueensBacktracking.py  QueensBrutForce.py  binairoSolverBacktracking.py  binairoSolverBrutForce.py  code_secret_Backtracking.py  code_secret_brut_force.py  minesweeperSolverBacktracking.py
b_Solver/: OrTools.py  QueensOrTools.py  QueensZ3.py  pocSolver.py  z3Only.py  z3_code_secret.py
c_TSP/: benchmark_tsp.ipynb  tsp.py  tspOrTools.py  tspPulp.py  tspZ3.py
d_Puzzle/: binairoSolverZ3.py  numberLinkSolverOrtools.py  numberLinkSolverZ3.py  sudokuSolverOrtools.py  sudokuSolverZ3.py  tentsSolverZ3.py
e_Benchmark/: queens_z3.py
e_Benchmark/sudoku/: sudoku100x100.py  sudoku16x16.py  sudoku25x25.py  sudoku25x25_2.py  sudoku25x25_3.py  sudoku36x36.py  sudoku36x36_2.py  sudoku49x49.py  sudoku9x9.py
