[project]
name = "humantalkpuzzlesolver"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "lkh>=2.0.0",
    "matplotlib>=3.10.3",
    "notebook>=7.4.2",
    "ortools>=9.12.4544",
    "pulp>=3.1.1",
    "pyscipopt>=5.5.0",
    "scipy>=1.15.3",
    "z3-solver>=4.12.2.0",
    "cplex>=22.1.0",
    "xpress",
]
